log
Sat 11 May 2024 09:11:52 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|8
total_score: 0/70
5c80269
Sat 11 May 2024 09:15:21 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
45cc308
Sat 11 May 2024 09:19:23 PM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:81:5: error: expected expression before ‘}’ token
   81 |     }
      |     ^
Compilation failed
67f89bb
Sat 11 May 2024 09:22:42 PM UTC: 
 treemap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
1417a6c
Sat 11 May 2024 09:51:51 PM UTC: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:52:16: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   52 |     TreeNode * parent= NULL;
      |                ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
a02ae07
Sat 11 May 2024 09:53:22 PM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:52:16: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   52 |     TreeNode * parent= NULL, * node = tree->root;
      |                ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
e8cf5c0
Sat 11 May 2024 09:53:36 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:54:9: error: ‘parent’ undeclared (first use in this function)
   54 |         parent = node;
      |         ^~~~~~
treemap.c:54:9: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
f9953bd
Sat 11 May 2024 09:54:15 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:52:16: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   52 |     TreeNode * parent = NULL, * node= tree->root;
      |                ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
bcf5886
Sat 11 May 2024 10:11:42 PM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:56:16: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   56 |     TreeNode * parent = NULL, * node= tree->root;
      |                ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
e67f399
Sat 11 May 2024 10:12:10 PM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:53:16: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   53 |     TreeNode * parent = NULL, * node= tree->root;
      |                ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
c60e401
Sat 11 May 2024 10:13:56 PM UTC: 
 treemap.c | 16 +++++++++++++---
 1 file changed, 13 insertions(+), 3 deletions(-)
 tests:  13|5
total_score: 25/70
65fb31b
Sat 11 May 2024 10:16:18 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
91dbf34
Sat 11 May 2024 10:22:34 PM UTC: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:103:5: error: expected expression before ‘}’ token
  103 |     }
      |     ^
Compilation failed
4227954
Sat 11 May 2024 10:23:23 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  17|4
total_score: 35/70
876e02c
